# fast_propeller

./: .gitignore  1_sub.txt  CMakeLists.txt  estimate.py  estimate_1101.py  estimate_3.py  estimate_nlopt.py  estimate_test.py  estimate_torch.py  estimate_torch_cpu.py  estimate_txt.py  readme.md  test.cpp  test.csv  test.ipynb
latency/diff_illumination/: 1_filterd_sos_latency.csv  2_filterd_sos_latency.csv  3_filterd_sos_latency.csv  4_filterd_sos_latency.csv  5_filterd_sos_latency.csv
latency/diff_rpm/: 1000_filterd_sos_latency.csv  2000_filterd_sos_latency.csv  3000_filterd_sos_latency.csv  4000_filterd_sos_latency.csv  5000_filterd_sos_latency.csv  6000_filterd_sos_latency.csv  7000_filterd_sos_latency.csv  8000_filterd_sos_latency.csv
src/: estimate.cpp  estimate2.cpp  estimate_cost.cpp  estimate_grad.cpp  read_data.cpp  test.cpp
trash/: estimate3.cpp
